--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Welcome to my Profile</title>
+		<title>FOODIES GROUP WEBSITE</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,17 +24,17 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>FOODIES</h1>
-								<p>text</p>
+								<h1>THE FOODIES</h1>
+								<p>WEBSITE FOR INTRO TO INFORMATION TO TECHNOLOGY ASSIGNMENT 2</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#1">text</a></li>
-								<li><a href="#2">text</a></li>
-								<li><a href="#3">text</a></li>
+								<li><a href="#1">S3781816</a></li>
+								<li><a href="#2">S3508768</a></li>
+								<li><a href="#3">S3786306 </a></li>
 								<li><a href="#4">text</a></li>
-								<li><a href="#5">text</a></li>
+				
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -45,8 +45,9 @@
 
 						<!-- PERSONAL INFORMATION -->
 							<article id="1">
-								<h2 class="major">title</h2>
-							    <p> text </p>
+								<h2 class="major">S3781816</h2>
+							    <b> CHRISTIAN PHONGSAVAN </b>
+								<p> text </p>
 
 							</article>
 
