--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#1">S3781816</a></li>
-								<li><a href="#2">S3508768</a></li>
-								<li><a href="#3">S3786306 </a></li>
+								<li><a href="#1">TEAM PROFILE</a></li>
+								<li><a href="#2">T</a></li>
+								<li><a href="#3">T </a></li>
 								<li><a href="#4">text</a></li>
 				
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -45,9 +45,9 @@
 
 						<!-- PERSONAL INFORMATION -->
 							<article id="1">
-								<h2 class="major">S3781816</h2>
-							    <b> CHRISTIAN PHONGSAVAN </b>
-								<p> text </p>
+								<h2 class="major">TEAM PROFILE</h2>
+							    <b> PERSONAL INFORMATION </b>
+								<p> </p>
 
 							</article>
 
