--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<article id="1">
 								<h2 class="major">TEAM PROFILE</h2>
 							    <b> PERSONAL INFORMATION </b>
-								<p> </p>
+								<p> text </p>
 
 							</article>
 
