--- a/index.html
+++ b/index.html
@@ -46,9 +46,15 @@
 						<!-- PERSONAL INFORMATION -->
 							<article id="1">
 								<h2 class="major">TEAM PROFILE</h2>
+				
 							    <b> PERSONAL INFORMATION </b>
-								<p> text </p>
-
+								<p>  </p>
+								<b> Patrick La - S3508768 </b>
+								<p> Text </p>
+                                <b> Christian Phongsavan - S3781816</b>
+								<p> Text </p>
+								<b> Andrew Zhang - S3786306</b>
+								<p> Text </p>
 							</article>
 
 						<!-- INTEREST IN IT -->
