--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>THE FOODIES</h1>
+								<h1>Hello</h1>
 								<p>WEBSITE FOR INTRO TO INFORMATION TO TECHNOLOGY ASSIGNMENT 2</p>
 							</div>
 						</div>
