--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<ul>
 								<li><a href="#1">TEAM INTRO</a></li>
 								<li><a href="#2">TEAM PROFILE</a></li>
-								<li><a href="#3">IDEAL JOBS </a></li>
+								<li><a href="#3">JOBS </a></li>
 							    <li><a href="#4">JOB COMPARISONS </a></li>
 				
 								<!--<li><a href="#elements">Elements</a></li>-->
